Fix portfolio on mobile

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -50,6 +50,12 @@ header ul li {
     font-weight: bold;
 }
 
+@media screen and (max-width: 600px) {
+    header ul li {
+        display: hidden;
+    }
+}
+
 /* Banner */
 
 #banner {
@@ -103,6 +109,7 @@ header ul li {
 #portfolio .flex {
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
 
 .project {
@@ -123,6 +130,16 @@ header ul li {
 .project h3 {
     font-size: 1.5rem;
     padding-left: 10px;
+}
+
+@media screen and (max-width: 800px) {
+    #portfolio .flex {
+        flex-direction: column;
+    }
+    .project {
+        width: 100%;
+        padding-top: 50%;
+    }
 }
 
 #portfolio #gameDev {
